deploy/k8s/api/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: unbind-api
  namespace: unbind
spec:
  selector:
    app: unbind-api
  type: ClusterIP
  ports:
    - port: 8089
      targetPort: 8089
